# RAG_OPL_Chroma

./: main.py  pyproject.toml
RAG/: commons.py  rag_chroma.py  rag_opl.py
chroma_db/: chroma.sqlite3
